tests/should_fail/invalid_interpolation.luma
-- Invalid string interpolation: missing closing quote
let x = "Hello ${name}
